Fix and update test cases Minor refactorings